Update model for SMSC instance again
